--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -1,7 +1,8 @@
 name: "Release Dockerfile"
 on:
-  release:
-    types: released
+  push:
+    branches:
+      - develop
 jobs:
   latest:
     runs-on: ubuntu-latest
@@ -16,11 +17,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push Dockerfile
         uses: docker/build-push-action@v2
-        env:
-          version: ${{ github.event.release.tag_name }}
         with:
           push: true
           file: "./tools/releasing/packaging/docker/Dockerfile"
-          tags: benjaminrueth/precice:${{ env.version }},benjaminrueth/precice:latest
-          build-args: |
-            version=${{ env.version }}
+          tags: benjaminrueth/precice:develop,benjaminrueth/precice:latest
