--- a/tools/releasing/packaging/docker/Dockerfile
+++ b/tools/releasing/packaging/docker/Dockerfile
@@ -5,9 +5,7 @@ FROM ubuntu:20.04
 ARG TIMEZONE=Europe/Berlin
 RUN export TZ=$TIMEZONE && echo $TZ > /etc/timezone && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
     apt-get -yy update && apt-get -yy install wget tzdata
-# The version to fetch the package for: vX.Y.Z
-ARG version
-RUN echo "$version" | grep "v[0-9]\+\.[0-9]\+\.[0-9]\+" > /dev/null # The version must follow the format vX.Y.Z
+RUN echo "v2.1.1" | grep "v[0-9]\+\.[0-9]\+\.[0-9]\+" > /dev/null # The version must follow the format vX.Y.Z
 RUN wget -q -O libprecice.deb https://github.com/precice/precice/releases/download/${version}/libprecice`echo ${version} | sed 's/v\([0-9]\+\)\.\([0-9]\+\.[0-9]\+\)/\1_\1.\2/'`_focal.deb && \
     ( dpkg -i libprecice.deb || apt-get install -fyy ) && \
     rm libprecice.deb && \
