--- a/tools/releasing/packaging/docker/Dockerfile
+++ b/tools/releasing/packaging/docker/Dockerfile
@@ -6,7 +6,7 @@ ARG TIMEZONE=Europe/Berlin
 RUN export TZ=$TIMEZONE && echo $TZ > /etc/timezone && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
     apt-get -yy update && apt-get -yy install wget tzdata
 RUN echo "v2.1.1" | grep "v[0-9]\+\.[0-9]\+\.[0-9]\+" > /dev/null # The version must follow the format vX.Y.Z
-RUN wget -q -O libprecice.deb https://github.com/precice/precice/releases/download/${version}/libprecice`echo ${version} | sed 's/v\([0-9]\+\)\.\([0-9]\+\.[0-9]\+\)/\1_\1.\2/'`_focal.deb && \
+RUN wget -q -O libprecice.deb https://github.com/precice/precice/releases/download/v2.1.1/libprecice`echo ${version} | sed 's/v\([0-9]\+\)\.\([0-9]\+\.[0-9]\+\)/\1_\1.\2/'`_focal.deb && \
     ( dpkg -i libprecice.deb || apt-get install -fyy ) && \
     rm libprecice.deb && \
     binprecice xml > /dev/null # Make sure the installation is functional
